# BLOGGING-PLATFORM

./: .gitignore  CMakeLists.txt  STEPS.docx  folder_structure.txt  main.cpp
static/: script.css  script.js
